# varsplit

./: LICENSE  README.md  environment.yml  pyproject.toml
examples/: CBPA2_HUMAN_Tsuboyama_2023_1O6X.csv  CBPA2_HUMAN_Tsuboyama_2023_1O6X.ipynb  CBPA2_HUMAN_Tsuboyama_2023_1O6X_example.ipynb
varsplit/: __init__.py  core.py
varsplit/diagnose/: __init__.py  metrics.py  plots.py  recommender.py  report.py
varsplit/parsing/: __init__.py  base.py  hgvs.py  infer.py  mavedb.py  standard.py
varsplit/strategies/: __init__.py  base.py  combinatorial.py  fitness.py  mutational.py  order.py  positional.py  random.py
varsplit/tests/: test_core.py
varsplit/tests/test_parsing/: test_hgvs.py  test_infer.py  test_standard.py
varsplit/tests/test_strategies/: test_fitness.py  test_mutational.py  test_order.py  test_positional.py  test_random.py
