[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "varsplit"
version = "0.1.0"
description = "Protein variant-aware train/test splitting for machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["protein", "machine learning", "deep mutational scanning", "train test split"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["varsplit*"]

[tool.pytest.ini_options]
testpaths = ["varsplit/tests"]
